--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,23 +113,6 @@
             android:lines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnClearInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/largeMargin"
-        android:background="@drawable/btn_design"
-        android:fontFamily="@font/roboto"
-        android:text="@string/clearButton"
-        android:textAllCaps="true"
-        android:textColor="@color/white"
-        android:textSize="@dimen/textSizeButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/numHexadecimal" />
-
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnConvert"
         android:layout_width="match_parent"
@@ -143,7 +126,25 @@
         android:textSize="@dimen/textSizeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnClearInput" />
+        app:layout_constraintTop_toBottomOf="@id/numHexadecimal" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnClearInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/normalMargin"
+        android:background="@drawable/btn_design"
+        android:fontFamily="@font/roboto"
+        android:text="@string/clearButton"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="@dimen/textSizeButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnConvert" />
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
