--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,7 +117,7 @@
         android:id="@+id/btnConvert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/normalMargin"
+        android:layout_marginTop="@dimen/largeMargin"
         android:background="@drawable/btn_design"
         android:fontFamily="@font/roboto"
         android:text="@string/convert"
